# data-eng-batchETL

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  coverage.yml
common/: config.py  ingest_tlc.py  io_s3.py  logging.py  schemas.py
infra/airflow/dags/: dag_dbt_build.py  dag_ingest_tlc.py
project-batch-warehouse/dbt_project/: dbt_project.yml  profiles.yml
project-batch-warehouse/dbt_project/macros/: generate_surrogate_key.sql
project-batch-warehouse/dbt_project/models/dims/: dim_date.sql  dim_vendor.sql  dim_zone.sql
project-batch-warehouse/dbt_project/models/staging/: schema.yml  sources.yml  stg_taxi_trips.sql
project-batch-warehouse/dbt_project/seeds/: seed_vendor.csv  seed_zone.csv
project-batch-warehouse/tests/integration/: test_ingest_idempotence.py
project-batch-warehouse/tests/unit/: test_ingest_tlc.py  test_io.py  test_logging.py
