[project]
name = "data-eng-batch"
version = "0.1.0"
description = "Batch ETL & Analytics Warehouse — Urban Mobility + Weather"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","B","I","UP","C90"]
ignore = ["D"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"